# libctf

./: .gitignore  AUTHORS.md  CMakeLists.txt  FindLIBELF.cmake  LICENSE  LICENSE.md  README.md  THANKS.md  build.ninja  install.sh  regenerate_rules.sh
src/: argument.c  argument.h  array.c  array.h  count.h  ctf.h  data_object.c  data_object.h  enum.c  enum.h  enum_entry.c  enum_entry.h  errors.c  errors.h  file.c  file.h  float.c  float.h  function.c  function.h  fwd_decl.c  fwd_decl.h  header.c  header.h  info.h  int.c  int.h  int_float.c  int_float.h  kind.c  kind.h  label.c  label.h  libctf.h  member.c  member.h  pointer.c  pointer.h  read.c  read.h  (+13 more)
src/api/: add.h  count.h  create.h  foreach.h  from_type.h  get.h  memory_usage.h  property.h  set.h
src/file/: errors.c  errors.h  file.c  file.h
src/label/: label.c  label.h
src/object/: data_object.c  data_object.h  function.h
src/read/: decompress.c  decompress.h  header.c  header.h  labels.c  labels.h  lookup.h  objects.c  read.c  read.h  space.h  strings.c  strings.h  types.c  vardata.c  vardata.h
src/type/: array.c  array.h  enum.c  enum.h  enum_entry.c  enum_entry.h  float.c  float.h  fwd_decl.c  fwd_decl.h  info.c  info.h  int.c  int.h  kind.c  kind.h  member.c  member.h  pointer.c  pointer.h  struct_union.c  struct_union.h  type.c  type.h  typedef.c  typedef.h
src/util/: bool.h  compression.c  compression.h  count.h  create.h  elf_section_find.c  elf_section_find.h  from_type.h  listing.h  property.h  section.h
test/unit/: .gitignore  README.md  build.ninja  run.c  test_case.h  unit_test.h
(+32 files in other folders)
